--- a/include/views/default/crunchbutton/frontend/free-food.phtml
+++ b/include/views/default/crunchbutton/frontend/free-food.phtml
@@ -4,14 +4,23 @@
 	<p>
 		Invite your friends and earn a free delivery in Crunch Credit for every new friend who orders!
 	</p>
-	<br /><br />
-		<div>
-			<p>
-				Earn points by ordering food, sharing your order, or referring friends.<br>
-				Share this family and friends code and both of you get your next delivery on us.<br>
-				<b>{{account.user.invite_code}}</b>
-			</p>
-		</div>
+
+	<br />
+	<div class="divider"></div>
+	<div ng-if="!account.user.points.free_delivery_message && account.user.points.away_free_delivery">
+		0 &nbsp;<span class="points"><progress max="100" value="{{points_percent}}"></progress></span>&nbsp; {{account.user.points.free_delivery}}
+
+	</div>
+	<br />
+	<div>
+		<p>
+			You are <b>{{account.user.points.away_free_delivery}}</b> points away from a free delivery.<br>
+			Earn points by ordering food, sharing your order, or referring friends.<br>
+			Share this family and friends code and both of you get your next delivery on us.<br>
+			<b>{{account.user.invite_code}}</b>
+		</p>
+	</div>
+
 		<div class="divider"></div>
 		<div class="social-button twitter-button social-button-invite" ng-click="referral.twitter();">
 			<i class="fa fa-twitter"></i><span class="social-button-text">Tweet</span>
