--- a/include/views/default/crunchbutton/frontend/order.phtml
+++ b/include/views/default/crunchbutton/frontend/order.phtml
@@ -22,13 +22,12 @@
 			</div>
 		<? endif ; ?>
 */ ?>
-
 		<div class="order-details">
 			<div ng-hide="account.user.has_auth">
 				Create an account to reorder your favorite food anywhere, including <a data-ng-href="http://crunchbutton.com">crunchbutton.com</a> on your phone.
 				<a href="javascript:;" ng-click="modal.signupOpen();" class="add-password-button">Create an account</a>
 				<br />
-				<div ng-if="order.reward.points" class="order-details-highlight">You just earned {{Math.floor(order.reward.points)}} points! <!--(we'll tell you what Crunch Credit is soon, we're not sure yet ourselves, but we think it's pretty great.)--> <strong>Double</strong> it by creating an account.<br><br></div>
+				<div ng-if="order.reward.points" class="order-details-highlight">You just earned {{Math.floor(order.reward.points)}} points! <strong>Double</strong> it by creating an account.<br><br></div>
 				<div class="divider dots"></div>
 			</div>
 
@@ -38,7 +37,7 @@
 					<div class="divider"></div>
 				</div>
 				<div ng-if="order.reward.points && !order.reward.shared">
-					<div class="order-details-highlight">You just earned {{order.reward.points}} points! A million points gets you a free delivery :)<br><br></div>
+					<div class="order-details-highlight">You just earned {{order.reward.points}} points! {{account.user.points.free_delivery}} points gets you a free delivery :)<br><br></div>
 				</div>
 				<div ng-show="order._new && referral.invite_url && referral.enabled">
 					Earn a FREE DELIVERY for every new customer you refer with your link!
