--- a/include/views/default/crunchbutton/frontend/drivers.apply.phtml
+++ b/include/views/default/crunchbutton/frontend/drivers.apply.phtml
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 		
-		<div class="form-group"></div>
+<!--		<div class="form-group"></div>-->
 
 		<div class="form-group">
 			<h4><span class="form-required">*</span> What type of phone do you have?</h4>
