--- a/include/views/default/crunchbutton/frontend/free-food.phtml
+++ b/include/views/default/crunchbutton/frontend/free-food.phtml
@@ -2,8 +2,24 @@
 
 	<h1 class="about-header">Free food</h1>
 	<p>
-		Invite your friends and earn a free delivery in Crunch Credit for every new friend who orders!
+		Earn a FREE DELIVERY for every new customer you refer with your code <b>{{account.user.invite_code}}</b>
+		<br>
+		Just get them to enter <b>{{account.user.invite_code}}</b> in the Notes section of their first order or visit your link:
+	<div class="field-container">
+		Invite URL:&nbsp;&nbsp;&nbsp;<input  type="text" ng-simulate-read-only="{{referral.cleaned_url()}}" value="{{referral.cleaned_url()}}" />
+	</div>
 	</p>
+
+<!--	<div class="divider"></div>-->
+	<div style="margin-top: 0" class="social-button twitter-button social-button-invite" ng-click="referral.twitter();">
+		<i class="fa fa-twitter"></i><span class="social-button-text">Tweet</span>
+	</div>
+	<div style="margin-top: 0" class="social-button facebook-button social-button-invite" ng-click="referral.facebook();">
+		<i class="fa fa-facebook"></i><span class="social-button-text">Share</span>
+	</div>
+	<div class="divider"></div>
+
+	<div class="divider"></div>
 
 	<br />
 	<div class="divider"></div>
@@ -14,24 +30,10 @@
 	<br />
 	<div>
 		<p>
-			You are <b>{{account.user.points.away_free_delivery}}</b> points away from a free delivery.<br>
-			Earn points by ordering food, sharing your order, or referring friends.<br>
-			Share this family and friends code and both of you get your next delivery on us.<br>
-			<b>{{account.user.invite_code}}</b>
+			You are <b>{{account.user.points.away_free_delivery}}</b> points away from a free delivery!<br>
 		</p>
 	</div>
 
-		<div class="divider"></div>
-		<div class="social-button twitter-button social-button-invite" ng-click="referral.twitter();">
-			<i class="fa fa-twitter"></i><span class="social-button-text">Tweet</span>
-		</div>
-		<div class="social-button facebook-button social-button-invite" ng-click="referral.facebook();">
-			<i class="fa fa-facebook"></i><span class="social-button-text">Share</span>
-		</div>
-		<div class="divider"></div>
-		<div class="field-container">
-			Invite URL:&nbsp;&nbsp;&nbsp;<input  type="text" ng-simulate-read-only="{{referral.cleaned_url()}}" value="{{referral.cleaned_url()}}" />
-		</div>
-		<div class="divider"></div>
+
 	</div>
 </div>
