--- a/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
@@ -156,7 +156,7 @@
 			<div class="order-item-block right">
 				<div class="order-icon"><i class="fa fa-heart"></i></div>
 				<div class="order-info">
-					<span ng-if="order._delivery_estimated_time">By </br> {{order._delivery_estimated_time}}</span>
+					<span ng-if="order._delivery_estimated_time">Delivery expected by </br> {{order._delivery_estimated_time}}</span>
 					<span ng-if="!order._delivery_estimated_time">None</span>
 				</div>
 			</div>
