--- a/include/views/default/crunchbutton/frontend/order.phtml
+++ b/include/views/default/crunchbutton/frontend/order.phtml
@@ -37,7 +37,7 @@
 					<div class="divider"></div>
 				</div>
 				<div ng-if="order.reward.points && !order.reward.shared">
-					<div class="order-details-highlight">You just earned {{order.reward.points}} points! {{account.user.points.free_delivery}} points gets you a free delivery :)<br><br></div>
+					<div class="order-details-highlight">You just earned {{order.reward.points}} points! Double it by sharing it on facebook. <br> {{account.user.points.free_delivery}} points gets you a free delivery :)<br><br></div>
 				</div>
 				<div ng-show="order._new && referral.invite_url && referral.enabled">
 					Earn a FREE DELIVERY for every new customer you refer with your link!
