--- a/include/views/default/crunchbutton/layout/html.body.phtml
+++ b/include/views/default/crunchbutton/layout/html.body.phtml
@@ -146,7 +146,7 @@
 				<? endif ; ?>
 
 				<div class="footer-content hidden-phone" ng-controller="MainHeaderCtrl">
-					<a ng-show="account.user.id_user" href="javascript:;" ng-click="navigation.link('/free-food')">Free food</a>
+					<a ng-show="account.user.id_user" href="javascript:;" ng-click="navigation.link('/free-food')">Free Food</a>
 					<a href="javascript:;" ng-click="navigation.link('/help')">Help</a>
 					<? if (c::config()->site->config('apply-to-drive')->val()) : ?>
 						<a href="https://docs.google.com/forms/d/1zmBx0XOxXi8UpqKX3n7lzXHJUbJqsMrjomqprYBRh0E/viewform?edit_requested=true">Apply to Drive</a>
