--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -8,6 +8,18 @@ $orange: #df4a32;
 $linkColor: #d74924;
 $navHilight: #22242a;
 
+@mixin box-border-radius() {
+	border-radius: 2px;
+}
+@mixin box-border-radius-left() {
+	border-top-left-radius: 2px;
+	border-bottom-left-radius: 2px;
+}
+@mixin box-border-radius-right() {
+	border-top-right-radius: 2px;
+	border-bottom-right-radius: 2px;
+}
+
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -903,7 +915,7 @@ input {
 .button {
 	border: 0;
 	padding: .5em 0 .5em 0;
-	border-radius: 0;
+	@include box-border-radius();
 	cursor: pointer;
 	color: #fff;
 	text-transform: uppercase;
@@ -915,6 +927,10 @@ input {
 	-ms-transition: background linear 0.08s;
 	-o-transition: background linear 0.08s;
 	transition: background linear 0.08s;
+}
+.button.bigger {
+	font-size: 1.2em;
+	text-align: center;
 }
 .button.ani-all {
 	-webkit-transform: translate3d(0,0,0);
@@ -1035,6 +1051,7 @@ input {
 	font-family: Ruda;
 	line-height: 1.3em;
 	padding: .5em .5em .2em .5em;
+	@include box-border-radius();
 }
 
 .dialog-subtext {
@@ -2125,6 +2142,7 @@ h4.title{
 	background: #fff;
 	color: #000;
 	padding: 1em 1em .9em 1em;
+	@include box-border-radius();
 }
 
 .info-block .order-icon {
@@ -2167,6 +2185,7 @@ h4.title{
 
 .order-item-block, .order-item-block-big, .order-item-block-bigger {
 	margin: .5em 0 .5em 0;
+	@include box-border-radius();
 }
 
 .order-item-block{
@@ -2217,6 +2236,7 @@ h4.title{
 	padding-bottom: 1em;
 	padding-top: 1em;
 	width: 47%;
+	@include box-border-radius();
 }
 
 .customer-total-block{
@@ -2248,6 +2268,7 @@ h4.title{
 	width: 100%;
 	height: 15em;
 	background-size:cover !important;
+	@include box-border-radius();
 }
 
 .detail {
@@ -2443,6 +2464,7 @@ b, strong{ font-weight: bold; }
 	border: 2px;
 	border-color: #e1574c;
 	border-style: solid;
+	@include box-border-radius();
 }
 
 .box-content2{
@@ -2450,6 +2472,7 @@ b, strong{ font-weight: bold; }
 	margin-bottom: 20px;
 	padding: 10px;
 	border: 5px;
+	@include box-border-radius();
 }
 
 .box-content-color {
@@ -2592,6 +2615,7 @@ b, strong{ font-weight: bold; }
 .order-contents {
 	background: #fff;
 	margin-bottom: 1.5em;
+	@include box-border-radius();
 }
 
 .order-contents td {
@@ -3464,6 +3488,14 @@ input[type="checkbox"].switch + div:before {
 
 .staff-community-repeat:not(:first-child):before {
 	content: ", ";
+}
+
+.box-filter .button:first-child {
+	@include box-border-radius-right();
+}
+.box-filter .button:last-child {
+	@include box-border-radius-left();
+	
 }
 
 .box-filter .button:not(:last-child) {
