updated the order page for drivers

--- a/include/views/default/cockpit2/frontend/drivers/drivers-shifts.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-shifts.phtml
@@ -11,9 +11,7 @@
 	
 	<div class="divider"></div>
 
-	<div class="divider"></div>
-
-	<h2 class="link title" ng-click="schedules()">Rank next week's shift preferences</h2>
+	<h2 class="link title" >Setup next week's shifts</h2>
 
 	<div class="drivers-shifts-list">
 
@@ -54,7 +52,7 @@
 		</div>
 
 		<div ng-if="!drivershifts.length" class="box-content">
-			You currently have no shifts.
+			You are not currently scheduled for any shifts.
 		</div>
 
 	</div>
