--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -392,10 +392,13 @@
 							*/ ?>
 						</div>
 
-						<div class="logo"><span class="dot"></span><span class="green">cockpit</span></div>
+						<div class="logo"><span class="dot"></span><span class="green">{{navTitle || 'cockpit'}}</span></div>
 
 					</div>
 				</div>
+			</div>
+			<div ng-controller="DriversOrderCtrl">
+				<div ng-include="'assets/view/drivers-accept-nav.html'"></div>
 			</div>
 
 			<div class="snap-content-inner bg" ng-scroll-position>
