--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -1,3 +1,5 @@
+@import 'mixins';
+
 $navColor: #202228;
 $sideBg: #2f323a;
 $navLinkColor: #aeb2b7;
@@ -7,6 +9,8 @@ $textColor: #312f38;
 $orange: #df4a32;
 $linkColor: #d74924;
 $navHilight: #22242a;
+
+
 
 @mixin box-border-radius() {
 	border-radius: 2px;
@@ -136,7 +140,7 @@ html {
 
 @media screen and (max-width: 1024px) {
 	.content-padding {
-		padding: 10px;
+		padding: 6px;
 	}
 	*:not(input):not(textarea) {
 		-webkit-touch-callout: none;
@@ -1057,7 +1061,7 @@ input {
 .dialog-subtext {
 	opacity: .8;
 	margin-bottom: 1em;
-	font-size: .7em;
+	font-size: .65em;
 	font-family: Ruda;
 	line-height: 1.3em;
 }
@@ -2141,8 +2145,9 @@ h4.title{
 .info-block {
 	background: #fff;
 	color: #000;
-	padding: 1em 1em .9em 1em;
+	padding: .6em .6em .5em .4em;
 	@include box-border-radius();
+	margin-bottom: 6px;
 }
 
 .info-block .order-icon {
@@ -2266,9 +2271,11 @@ h4.title{
 
 .order-map {
 	width: 100%;
-	height: 15em;
+	height: 10em;
 	background-size:cover !important;
+	background-position: center center !important;
 	@include box-border-radius();
+	margin-bottom: 6px;
 }
 
 .detail {
@@ -2620,13 +2627,13 @@ b, strong{ font-weight: bold; }
 }
 
 .order-contents td {
-	padding: .7em;
+	padding: .5em;
 }
 
 .check-reminder{
-	font-size: 1.2em;
+	font-size: 1.1em;
 	text-align: left;
-	padding: .8em;
+	padding: .5em;
 	line-height: 1.5em;
 }
 
@@ -2659,25 +2666,26 @@ b, strong{ font-weight: bold; }
 	font-size: 1em;
 	float: left;
 }
-.box-content-new, .box-content-rejected, .box-content-accepted, .box-content-pickedup, .box-content-delivered {
+.box-content-nav-box {
 	font-family: Ruda;
 	color: #fff;
-	padding: 1em;
+	padding: 10px 6px 8px 6px;
+	box-shadow: inset 0 -1px 0 0 rgba(0,0,0,.1)
 }
 .box-content-new {
-	background-color: #e1574c;
+	background-color: rgba(225, 87, 76, .97);
 }
 .box-content-rejected {
-	background-color: #e1574c;
+	background-color: rgba(225, 87, 76, .97);
 }
 .box-content-accepted {
-	background-color: #4ac5bc;
+	background-color: rgba(74, 197, 188, .97);
 }
 .box-content-pickedup {
-	background-color: #444c57;
+	background-color: rgba(68, 76, 87, .97);
 }
 .box-content-delivered {
-	background-color: #d6d9dc;
+	background-color: rgba(214, 217, 220, .97);
 	color: #48494C;
 }
 
@@ -3841,3 +3849,37 @@ body[class*=" page-drivers-welcome-"] .nav-top .nav-back {
 .driver-feedback .form-group textarea{
     height:100px;
 }
+
+.order-box-top {
+	height: 1em;
+	width: 100%;
+	position: fixed;
+	top: 0;
+	z-index: 99;
+	@include gpu();
+	@include transition(all linear 0.08s);
+	margin-top: -100px;
+}
+
+.order-box-top.order-box-top-show {
+	margin-top: 0px;
+}
+
+.order-box-top .top-pad {
+	height: 4em;
+	padding-top: 15px;
+}
+
+
+
+@media screen and (min-width: 1025px) {
+	.hide-desktop {
+		display: none;
+	}
+}
+@media screen and (max-width: 1024px) {
+	.hide-mobile {
+		display: none;
+	}
+}
+
