--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -28,6 +28,8 @@
 <script src="/assets/cockpit/js/angular-google-maps.min.js"></script>
 <script src="/assets/cockpit/js/favico.min.js"></script>
 <script src="/assets/cockpit/js/angular-chart.js"></script>
+<script src="/assets/cockpit/js/hammer.min.js"></script>
+<script src="/assets/cockpit/js/angular-gestures.min.js"></script>
 
 <script src="/assets/js/snap.js"></script>
 <script src="/assets/js/date.js"></script>
