--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -393,7 +393,7 @@
 					</div>
 				</div>
 			</div>
-			<div ng-controller="DriversOrderCtrl">
+			<div ng-controller="DriversOrderNavCtrl">
 				<div ng-include="'assets/view/drivers-accept-nav.html'"></div>
 			</div>
 
