--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -1172,12 +1172,12 @@ input {
 .li-input input,
 .li-input select,
 .li-input textarea{
-	border: 2px solid $green;
+	border: 1px solid $green;
 	color: $textColor;
 	padding:.48em;
 	font-size: 1.1em;
-	border-radius: 0;
 	width: 90%;
+	@include box-border-radius();
 }
 .li-input textarea{
 	height: 50px;
@@ -1216,8 +1216,7 @@ input {
 	font-weight: normal;
 }
 
-.li-input .button, .li-input .button-big{
-	border-radius: 0;
+.li-input .button, .li-input .button-big {
 	width: auto;
 	margin-right: .8em;
 	padding-right: 1em;
@@ -3328,8 +3327,8 @@ h1.driver-title {
 	color: $textColor;
 	padding:.48em;
 	font-size: 1em;
-	border-radius: 0;
 	width: 90%;
+	@include box-border-radius();
 }
 
 .support-side-chat .ul-inputs .li-input .button{
@@ -3788,10 +3787,6 @@ body[class*=" page-drivers-welcome-"] .nav-top .nav-back {
 }
 .drivertextbox {
     width: 50%;
-    position: relative;
-    min-height: 1px;
-    padding-left: 15px;
-    padding-right: 15px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -3808,19 +3803,17 @@ body[class*=" page-drivers-welcome-"] .nav-top .nav-back {
     -webkit-box-shadow: none;
     box-shadow: none;
     height: 36px;
-    padding-left: 12px;
-    padding-right: 12px;
+    padding: .5em;
     display: block;
     width: 100%;
     height: 34px;
-    padding: 6px 12px;
     font-size: 16px;
     line-height: 1.42857;
     color: #555;
     vertical-align: middle;
     background-color: #fff;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    @include box-border-radius();
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
     box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
     -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
