--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -3887,3 +3887,15 @@ body[class*=" page-drivers-welcome-"] .nav-top .nav-back {
 .driver-top-pad {
 	height: 6em;
 }
+
+.tableOfContentsFAQHead{
+  font-size: 2em;
+  color: black;
+  line-height: 1.5em;
+}
+.tableOfContentsFAQ{
+  text-decoration: none;
+  font-size: 1.5em;
+  line-height: 1.2em;
+  color: #317F7A;
+}
