--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -1,3 +1,4 @@
+
 <div class="top-pad"></div>
 
 <div class="content-padding">
@@ -5,22 +6,22 @@
 <h1 class="title left"><i class="fa fa-support"></i><span>FAQ</span></h1>
 
 	<div class="divider"></div>
-        <h2 style="font-size:2em; color: black; line-height: 1.5em">
+        <h2 class="tableOfContentsFAQHead">
             Table of Contents
     </h2>
-        <a style="text-decoration:none; font-size:1.5em; line-height:1.2em; color:#317F7A" href="#deliveryBasics">
+        <a class="tableOfContentsFAQ" href="#deliveryBasics">
             Delivery Basics
         </a><br>
-        <a style="text-decoration:none; font-size:1.5em; line-height:1.2em; color:#317F7A" href="#advancedDelivery">
+        <a class="tableOfContentsFAQ" href="#advancedDelivery">
             Advanced Delivery
         </a><br>
-        <a style="text-decoration:none; font-size:1.5em; line-height:1.2em; color:#317F7A" href="#payment">
+        <a class="tableOfContentsFAQ" href="#payment">
             Payment
         </a><br>
-        <a style="text-decoration:none; font-size:1.5em; line-height:1.2em; color:#317F7A" href="#shifts">
+        <a class="tableOfContentsFAQ" href="#shifts">
             Shifts
         </a><br>
-        <a style="text-decoration:none; font-size:1.5em; line-height:1.2em; color:#317F7A" href="#moreHelp">
+        <a class="tableOfContentsFAQ" href="#moreHelp">
             More Help
         </a>
 
@@ -32,11 +33,11 @@
 		<br><br>
        <a name="deliveryBasics"></a>
         <b>How can we make your driving experience more awesome?</b><br>
-		 <a href="https://docs.google.com/forms/d/1TsYU7LKyi8AQhM317n1v-SEiP-8OuiQIReV6XZHd-HM/viewform"  target="_system">Send us anonymous feedback!</a>
+		 <a href="/drivers/feedback"  target="_system">Send us anonymous feedback!</a>
 
 		<br><br>
 <!--delivery basics section-->
-        <span style="font-size:2em; color: black">
+        <span class="tableOfContentsFAQHead">
             Delivery Basics
         </span><br>
 
@@ -105,7 +106,7 @@ In many cases we don't have a formal relationship with the restaurant, and it's 
         What if the order price is wrong?
         </b>
         <br>
-We'll tell you how much the food should cost. If it costs more, email <a href="mailto:team@crunchbutton.com">team@crunchbutton.com</a> a photo of your receipt right away so we can change the prices and reimburse you correctly.<br><br>
+We'll tell you how much the food should cost. If it costs more, email <a href="mailto:payment@crunchbutton.com">payment@crunchbutton.com</a> a photo of your receipt right away so we can change the prices and reimburse you correctly.<br><br>
 
         <b>
         What if the customer doesn’t show up?
@@ -129,7 +130,7 @@ Absolutely. You don't have to deliver an order before picking up the next one. W
 		<br><br>
 <!--end #deliveryBasics-->
 <!--start #advancedDelivery section-->
-        <span style="font-size:2em; color: black">
+        <span class="tableOfContentsFAQHead">
             Advanced Delivery
         </span><br>
 
@@ -174,7 +175,7 @@ Your Personal Invite Code: <strong>{{account.user.invite_code}}</strong>. Get ne
 <!--end #advancedDelivery section-->
 
  <!--start #payments section-->
-        <span style="font-size:2em; color: black">
+        <span class="tableOfContentsFAQHead">
             Payment
         </span><br>
 
@@ -196,14 +197,14 @@ We deposit your payment every Friday. You get to keep all cash received from cas
 <!--end #payments section-->
 
 <!--start #shifts section-->
-         <span style="font-size:2em; color: black">
+         <span class="tableOfContentsFAQHead">
             Shifts
         </span><br>
 
         <b>
         What are Flex vs Perma-Shifts?
         </b><br>
-You'll work either the same days every week (perma-shifts) or different days each week (flex shifts). In either case, you can view your shifts any time on cockpit. Email us at <a href="mailto:team@crunchbutton.com">team@crunchbutton.com</a> to set up perma-shifts.<br><br>
+You'll work either the same days every week (perma-shifts) or different days each week (flex shifts). In either case, you can view your shifts any time on cockpit. Email us at <a href="mailto:drivers@crunchbutton.com">drivers@crunchbutton.com</a> to set up perma-shifts.<br><br>
 
         <b>
         How do Flex Shifts work?
@@ -224,16 +225,16 @@ If you absolutely can’t find anyone yourself, it's important you give us 2 day
 <!--end #shifts section-->
 
 <!--start #moreHelp section-->
-  <span style="font-size:2em; color: black">
+  <span class="tableOfContentsFAQHead">
        <a name="moreHelp"></a>
             More Help
         </span><br>
         <b>I’m having difficulty using cockpit.la.</b><br>
-        Try a different browser. On iOS devices, use Safari. On Android, use Chrome (not Firefox). If you’re still having issues, please text us at <a ng-click="callText('646-783-1444')">646-783-1444</a> or email the specifics and a screenshot of the issue to <a href="mailto:team@crunchbutton.com">team@crunchbutton.com</a>.
+        Try a different browser. On iOS devices, use Safari. On Android, use Chrome (not Firefox). If you’re still having issues, please text us at <a ng-click="callText('646-783-1444')">646-783-1444</a> or email the specifics and a screenshot of the issue to <a href="mailto:drivers@crunchbutton.com">drivers@crunchbutton.com</a>.
         <br><br>
 
         <b>I found a bug with Crunchbutton or Cockpit. What should I do?</b><br>
-        We hate bugs! Email us at <a href="mailto:team@crunchbutton.com">team@crunchbutton.com</a> with the exact details and pics if you can. If you tell us enough info to reproduce and fully fix the problem, we’d really appreciate it!<br><br>
+        We hate bugs! Email us at <a href="mailto:drivers@crunchbutton.com">drivers@crunchbutton.com</a> with the exact details and pics if you can. If you tell us enough info to reproduce and fully fix the problem, we’d really appreciate it!<br><br>
 
         <b>Can I change my cockpit password?</b><br>
         Sure, but right now we have to do it for you manually. Text us what you want us to change your password to at <a ng-click="callText('646-783-1444')">646-783-1444</a> .<br><br>
