--- a/include/views/default/seven/layout/html.body.phtml
+++ b/include/views/default/seven/layout/html.body.phtml
@@ -171,7 +171,7 @@
 	<div class="divider"></div>
 </div>
 
-<div class="footer">
+<div class="footer hide-before-init">
 	<div class="content-padding">
 		<div class="logo"></div>
 		<p>Push a button. Get food. We find the best food from the top local restaurants so you dont have to.</p>
