fixed ssl issue

--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -2293,7 +2293,7 @@ h4.title{
 }
 
 .icon-chef {
-	background: url(http://dev.crunchr.co/assets/images/micro/icon-chef.svg) no-repeat;
+	background: url(https://cockpit.la/assets/images/micro/icon-chef.svg) no-repeat;
 	background-position: top center;
 	width: 2em;
 	height: 2em;
@@ -2301,7 +2301,7 @@ h4.title{
 }
 
 .icon-user {
-	background: url(http://dev.crunchr.co/assets/images/micro/icon-user.svg) no-repeat;
+	background: url(https://cockpit.la/assets/images/micro/icon-user.svg) no-repeat;
 	background-position: top center;
 	width: 2em;
 	height: 2em;
