--- a/include/views/default/crunchbutton/frontend/orders.phtml
+++ b/include/views/default/crunchbutton/frontend/orders.phtml
@@ -39,7 +39,9 @@
 			<?php */ ?>
 			<a id="credit"></a>
 			<div ng-if="!account.user.points.free_delivery_message && account.user.points.away_free_delivery">
-				0 &nbsp;<span class="points"><progress max="100" value="{{points_percent}}"></progress></span>&nbsp; {{account.user.points.free_delivery}}
+				0 &nbsp;<span class="points"><progress max="100" value="{{account.user.points.points_percent}}"></progress></span>&nbsp; {{account.user.points.free_delivery}}
+				<br/><br/>
+
 				<p>
 					You are <b>{{account.user.points.away_free_delivery}}</b> points away from a free delivery.<br>
 					Earn points by ordering food, sharing your order, or referring friends.<br>
@@ -52,11 +54,6 @@
 			</div>
 
 			<br>
-
-			<div>Earn points by ordering food, sharing your order, or referring friends.</div><br/>
-			<div>Share this family and friends code and both of you get your next delivery on us.</div><br/>
-			<div><strong>{{account.user.invite_code}}</strong></div>
-
 			<div class="divider"></div>
 			<div class="social-button twitter-button social-button-invite" ng-click="referral.twitter();">
 				<i class="fa fa-twitter"></i><span class="social-button-text">Tweet</span>
