--- a/include/views/default/crunchbutton/frontend/restaurant.phtml
+++ b/include/views/default/crunchbutton/frontend/restaurant.phtml
@@ -381,7 +381,7 @@
 				<span ng-show="order.form.pay_type=='card'">by card</span>
 			</div>
 
-			<div ng-show="points.free_delivery_message">
+			<div ng-show="points.free_delivery_message && restaurant.delivery_service == '1'" >
 				<strong ng-if="order.form.pay_type == 'card'">You have {{points.free_delivery}} points! This delivery fee is on us.</strong>
 				<strong ng-if="order.form.pay_type == 'cash'">Pay with a card, NOT CASH, to get our delivery free.</strong>
 			</div>
@@ -396,7 +396,7 @@
 	<div class="delivery-payment-info main-content-readable" ng-show="restaurant._open && !order.showForm && order.cart.hasItems()">
 
 
-		<div ng-show="restaurant.delivery == '1' && order.form.delivery_type=='delivery' && points.free_delivery_message">
+		<div ng-show="restaurant.delivery == '1' && order.form.delivery_type=='delivery' && points.free_delivery_message  && restaurant.delivery_service == '1'">
 			<strong ng-if="order.form.pay_type == 'card'">You have {{points.free_delivery}} points! This delivery fee is on us.</strong>
 			<strong ng-if="order.form.pay_type == 'cash'">Pay with a card, NOT CASH, to get our delivery free.</strong>
 		</div>
