detect if a user is eligible for a first time referal before telling them #4932

--- a/include/views/default/crunchbutton/frontend/giftcard.phtml
+++ b/include/views/default/crunchbutton/frontend/giftcard.phtml
@@ -14,9 +14,13 @@
 		<div class="error" ng-show="modal.error == 'invalid'">
 			Sorry, this is an invalid gift card.
 		</div>
-		<div class="error" ng-show="modal.error != 'used' && modal.error != 'invalid'">
+		<div class="error" ng-show="modal.error == 'not-eligible'">
+			Sorry, invite codes are for first time users only.
+		</div>
+		<div class="error" ng-show="modal.error != 'used' && modal.error != 'invalid' && modal.error != 'not-eligible'">
 			Please try it again.
 		</div>
+
 	</div>
 
 	<!-- Success -->
