--- a/www/assets/scss/style.scss
+++ b/www/assets/scss/style.scss
@@ -3113,7 +3113,7 @@ h1.about-header {
 .drivers-apply .form-control {
     -webkit-box-shadow: none;
     box-shadow: none;
-    padding: .2em .5em; 
+    padding: .2em .5em;
     color: #555;
     line-height: 1.4em;
     background-color: #fff;
@@ -3138,13 +3138,13 @@ h1.about-header {
 
 
 .drivers-apply .button-bottom {
-    width: 11em; 
+    width: 11em;
     background-color:rgb(247, 128, 83);
     color:white;
     border-radius:4px;
-    border:none;  
+    border:none;
 }
-   
+
 i {
     font-style:italic;
     font-weight:300;
@@ -3230,3 +3230,13 @@ i {
   border-radius: 10px;
   background-size: 35px 20px, 100% 100%, 100% 100%;
 }
+.reward-info{
+	text-align: left !important;
+}
+	.reward-info .social-button{
+		margin-top: 0;
+	}
+	.reward-info .social-button{
+		padding-top:2px;
+		width:130px;
+	}
