--- a/include/views/default/crunchbutton/frontend/order.phtml
+++ b/include/views/default/crunchbutton/frontend/order.phtml
@@ -63,8 +63,8 @@
 						<div class="divider"></div>
 						<br>
 						<div>
-						<div id="twitter-button-test">aqui</div>
 							Triple them by sharing on Twitter:
+							<twitter-button count="none"></twitter-button>
 							<div class="social-button twitter-button" ng-click="referral.twitter();">
 								<i class="fa fa-twitter"></i><span class="social-button-text">Tweet</span>
 								<div class="divider"></div>
