Twitter Sharing From Order Confirmation Page #5026

--- a/include/views/default/crunchbutton/frontend/order.phtml
+++ b/include/views/default/crunchbutton/frontend/order.phtml
@@ -41,7 +41,7 @@
 					<div class="divider"></div>
 				</div>
 				*/ ?>
-				<div class="field-container" ng-if="order.reward.points && !order.reward.shared">
+				<div class="field-container" ng-if="order.reward.points">
 					<div class="order-details-highlight">
 						<div ng-if="account.user.points.free_delivery_message && account.user.points.free_delivery">
 							You have <strong>{{account.user.points.free_delivery}}</strong> points!
@@ -53,22 +53,24 @@
 					</div>
 					<div class="reward-info" ng-if="!account.user.points.free_delivery_message">
 						<br>
-						<div>
+						<div ng-if="!order.reward.shared.facebook">
 							Double your points by sharing on Facebook:
 							<div class="social-button facebook-button" ng-click="referral.facebook();">
 								<i class="fa fa-facebook"></i><span class="social-button-text">Share</span>
 								<div class="divider"></div>
 							</div>
 						</div>
+						<div ng-if="order.reward.shared.facebook">
+							Thanks for sharing on Facebook.
+						</div>
 						<div class="divider"></div>
 						<br>
-						<div>
+						<div ng-if="!order.reward.shared.twitter">
 							Triple them by sharing on Twitter:
 							<twitter-button count="none"></twitter-button>
-							<div class="social-button twitter-button" ng-click="referral.twitter();">
-								<i class="fa fa-twitter"></i><span class="social-button-text">Tweet</span>
-								<div class="divider"></div>
-							</div>
+						</div>
+						<div ng-if="order.reward.shared.twitter">
+							Thanks for sharing on Twitter.
 						</div>
 						<div class="divider"></div>
 						<br>
