--- a/include/views/default/cockpit2/frontend/settlement/settlement-drivers-payment-arbitrary.phtml
+++ b/include/views/default/cockpit2/frontend/settlement/settlement-drivers-payment-arbitrary.phtml
@@ -37,7 +37,7 @@
 				</div>
 			</li>
 			<li class="li-input" ng-class="{'error':form.paymentNotes.$invalid}">
-				<div class="label">Payment notes:</div>
+				<div class="label">Message displayed to driver in payment summary and automated email that gets sent right now:</div>
 				<div class="input"><input type="text" name="paymentNotes" ng-model="payment.notes" required maxlength="255" placeholder=""></div>
 				<div class="box-error">
 					<small ng-show="form.paymentNotes.$error.required">Required.</small>
