--- a/include/views/default/seven/layout/html.body.phtml
+++ b/include/views/default/seven/layout/html.body.phtml
@@ -136,7 +136,7 @@
 					<div title="Crunchbutton" class="logo animated-resize" ng-click="navigation.home()"></div>
 					
 					<div class="desktop-top-nav hide-mobile hide-before-init">
-						<a href="/work"><u>We're hiring!</u></a>
+						<a href="/work"><u>Work with us!</u></a>
 						<a href="/">Home</a>
 						<a href="/help">Help</a>
 						<a href="/orders" ng-if="account.user.id_user">Account</a>
