--- a/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
@@ -7,9 +7,10 @@
 
 
 	<div ng-if="oc.order.status.status != 'accepted' && oc.order.status.status != 'delivered' && oc.order.status.status != 'rejected' && oc.order.status.driver.id_admin == account.user.id_admin">
-		<div ng-show="!text_customer_5_min_away_sending">
+		<div ng-show="!text_customer_5_min_away_sending" ng-if="!hasCustomerBeenTexted5Minutes">
 			<button ng-click="oc.text_customer_5_min_away()" class="button orange-on-orange">Text Customer I'm 5 Min Away</button>
 		</div>
+		<div ng-if="hasCustomerBeenTexted5Minutes">You have already texted the customer you're 5 min away</div>
 		<div ng-show="text_customer_5_min_away_sending">
 			<button class="button orange-on-orange">
 				<i class="fa fa-circle-o-notch fa-spin"></i> Sending
