Finish up rewards system #4881

--- a/include/views/default/crunchbutton/frontend/orders.phtml
+++ b/include/views/default/crunchbutton/frontend/orders.phtml
@@ -45,8 +45,9 @@
 				<p>
 					You are <b>{{account.user.points.away_free_delivery}}</b> points away from a free delivery.<br>
 					Earn points by ordering food, sharing your order, or referring friends.<br>
-					Share this family and friends code and both of you get your next delivery on us.<br>
-					<b>{{account.user.invite_code}}</b>
+					Get your friends to enter your code {{account.user.invite_code}} in the Notes section of their first order, and you'll both get $3 off ;)
+					<br>
+					<b></b>
 				</p>
 			</div>
 			<div ng-if="account.user.points.free_delivery_message && account.user.points.free_delivery">
