--- a/include/views/default/seven/frontend/orders.phtml
+++ b/include/views/default/seven/frontend/orders.phtml
@@ -16,16 +16,25 @@
 
 	<div class="divider"></div>
 
-	<p>Share this family and friends code and both of you get your next delivery on us.</p><br/>
+	<p>Get your friends to enter your code USF919AVJ in the Notes section of their first order, and you'll both get $3 off ;) </p><br/>
 	<p class="order-code"><strong>{{account.user.invite_code}}</strong></p>
 
 	<br/>
 
 	<div class="button-pushable">
 		<button class="button facebook" ng-click="referral.facebook()">
-			<i class="fa fa-facebook-square"></i><span>Share</span>
+			<i class="fa fa-facebook-square"></i> <span>Share</span>
 		</button>
 	</div>
+
+	<br/>
+
+	<div class="button-pushable">
+		<button class="button twitter" ng-click="referral.twitter()">
+			<i class="fa fa-twitter-square"></i> <span>Twitter</span>
+		</button>
+	</div>
+
 
 	<br/><br/>
 
